--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ highlighter: pygments
 
 
 ### content configuration ###
-title:       "title"
+title:       "resume | Meixuan Shi"
 keywords:    "keyword"
 description: "description"
 source_link: "source_link"
